chore(build): migrate to dev.failsafe